[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Dog/Dog2.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Actors/Character.gd" type="Script" id=2]
[ext_resource path="res://Assets/Dog/Dog4.png" type="Texture" id=3]
[ext_resource path="res://Assets/Dog/Dog1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Dog/Dog3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Audio/Sounds/waf2.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Audio/Sounds/waf1.wav" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 56.0

[sub_resource type="CircleShape2D" id=4]
radius = 56.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 56.5685

[node name="Character" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 248, -120 )
shape = SubResource( 1 )

[node name="FishCatcher" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FishCatcher"]
position = Vector2( 248, -120 )
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 248, -120 )
shape = SubResource( 3 )

[node name="Waf1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Waf2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
